fix jump form

--- a/component/loading/Loading.module.css
+++ b/component/loading/Loading.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 50vh;
+  margin-top: 45vh;
 }
 
 @keyframes ldio-k7p955jjpn {
@@ -74,3 +74,9 @@
   box-sizing: content-box;
 }
 /* generated by https://loading.io/ */
+
+@media (max-width: 885px) {
+  .container {
+    margin-top: 40vh;
+  }
+}
