--- a/pages/quran/Surah.module.css
+++ b/pages/quran/Surah.module.css
@@ -1,5 +1,6 @@
 .jump-container {
   margin-top: 3%;
+  padding: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,22 +16,22 @@
   width: 30%;
   border: solid 3px #113a55;
   margin: 0 5px;
+  text-align: center;
 }
 
-.btn {
+.jump-container button {
   background-color: #113a55;
   padding: 8px 12px;
   color: white;
-  border-radius: 4px;
   cursor: pointer;
 }
 
-.btn:hover {
+.jump-container button:hover {
   background-color: #3a6683;
 }
 
 .container {
-  margin-top: 100px;
+  margin-top: 120px;
 }
 
 .ayat-container {
